--- a/JavaScript/Exercicio_Solved/CSS/estilo.css
+++ b/JavaScript/Exercicio_Solved/CSS/estilo.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-#container {
+.container {
     display: flex;
     background-color: rgb(124, 164, 199);
     height: 100vh;
@@ -17,5 +17,15 @@
     border-radius: 10px;
 }
 
+#resultado {
+    width: 300px;
+    height: 200px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px; 
+    margin-top: 10px;
+}
 
 
